# crossfire-server-mirror

./: .gitignore  CMakeLists.txt  ChangeLog  Doxyfile  Makefile.am  Makefile.in  configure  configure.ac
.github/workflows/: build.yml
common/: Makefile.am  Makefile.in  active.cpp  bufferreader.cpp  cf_profiling.cpp  events.cpp  exp.c  friend.cpp  init.cpp  item.c  languages.cpp  living.c  living.cpp  loader.l  map.c  map.cpp  ob_methods.cpp  object.c  object.cpp  output_file.cpp  porting.cpp  readable.cpp  stringbuffer.cpp  time.cpp  treasure.c  treasure.cpp  utils.c  utils.cpp
common/assets/: Archetypes.cpp  AssetCollector.cpp  Facesets.cpp  PngLoader.cpp  TarLoader.cpp  TreasureLoader.cpp  TreasureWriter.cpp
crossedit/: Makefile.in
crossedit/Cnv/: Makefile.in
crossedit/bitmaps/: Makefile.in
crossedit/doc/: Makefile.in
crossedit/include/: Makefile.in
devel/: Makefile.in
doc/: Makefile.in
doc/Developers/: Makefile.in  map.dox  media-tags.md  objects  protocol  protocol.txt
doc/playbook/: Makefile.in
doc/playbook-html/: Makefile.in
doc/scripts/: Makefile.in
doc/spell-docs/: Makefile.in
doc/spoiler/: Makefile.in
doc/spoiler-html/: Makefile.in
include/: Archetypes.h  AssetLoader.h  AssetsManager.h  Makefile.am  Makefile.in  bufferreader.h  cf_profiling.h  config.h  define.h  global.h  libproto.h  living.h  map.h  modules.h  newserver.h  object.h  player.h  plugin.h  server.h  server_capi.h  sockproto.h  sproto.h  tod.h  treasure.h  win32.h
include/shared/: newclient.h
lib/: Makefile.am  Makefile.in  def_help  exp_table
lib/config/: gavoiddefs  settings  treedefs  waterdefs  wavoiddefs  wevapdefs  wmeltdefs  wreplacedefs  wsettings
lib/help/: cast.en  cast.fr  chat.en  delete.en  disarm.en  dm.en  drop.en  drop.fr  dropall.en  dropall.fr  fire.en  fire_stop.en  get.en  hostile.en  invoke.en  keys.en  listen.en  mapscale.en  melee.en  mode.en  motd.en  mouse.en  move.en  news.en  nextkey.en  pickup.en  prepare.en  prevkey.en  quit.en  range.en  ready_skill.en  rename.en  rules.en  run.en  run_stop.en  save.en  search.en  shout.en  show.en  spells.en  (+7 more)
lib/i18n/: messages.fr
macros/: cf_xslt.m4
make_win32/: crossfire.rc  crossfire.sln  crossfire32.sln  crossfire32.vcxproj  crossfire32.vcxproj.filters
make_win32/get_maps/: clone.bat  get_maps.vcxproj  get_maps.vcxproj.filters
make_win32/install_files/: collect.bat  install.bat  install_files.vcxproj  install_files.vcxproj.filters
make_win32/plugin_anim/: plugin_anim.vcxproj  plugin_anim.vcxproj.filters
make_win32/plugin_common/: plugin_common.vcxproj  plugin_common.vcxproj.filters
make_win32/plugin_python/: plugin_python.rc  plugin_python.vcxproj
plugins/: CMakeLists.txt  Makefile.in
plugins/cfanim/: Makefile.in  cfanim.cpp
plugins/cfanim/include/: Makefile.in
plugins/cfpython/: Makefile.in  cfpython.c  cfpython.cpp  cfpython_map.cpp  cfpython_object.cpp
plugins/cfpython/include/: Makefile.in  cfpython.h  cfpython_proto.h
plugins/common/: Makefile.in  plugin_common.cpp
plugins/common/include/: Makefile.in  plugin_common.h
random_maps/: Makefile.am  Makefile.in  main.cpp  random_map.cpp  style.cpp
server/: Makefile.am  Makefile.in  account.cpp  alchemy.c  alchemy.cpp  apply.cpp  attack.c  attack.cpp  build.lisp  c_misc.c  c_misc.cpp  c_object.c  c_object.cpp  c_party.c  c_party.cpp  c_wiz.c  c_wiz.cpp  commands.cpp  disease.cpp  gods.c  init.c  init.cpp  knowledge.cpp  login.c  login.cpp  monster.cpp  move.cpp  party.cpp  pets.cpp  player.c  player.cpp  plugins.c  plugins.cpp  quest.cpp  rune.cpp  server.c  server.cpp  server_lisp.lisp  shop.cpp  skill_util.c  (+14 more)
server/modules/: cfcitybell.cpp  cfweather.c  cfweather.cpp  citylife.cpp  random_house_generator.cpp
socket/: Makefile.in  fileserver.cpp  init.c  init.cpp  loop.c  loop.cpp  lowlevel.c  metaserver.c  metaserver.cpp  request.c  request.cpp  requestinfo.cpp
test/: CMakeLists.txt  Makefile.in
test/include/: Makefile.in
test/templates/: Makefile.in
test/toolkit/: Makefile.in
test/unit/: Makefile.in
test/unit/common/: Makefile.in  check_arch.cpp  check_artifact.c  check_friend.cpp  check_mapsave.c  check_object.cpp  stubs_common.cpp
test/unit/crossedit/: Makefile.in
test/unit/random_maps/: Makefile.in
test/unit/server/: Makefile.in  check_monster.cpp
test/unit/socket/: Makefile.in
types/common/: projectile.cpp
types/lightable/: lightable.cpp
types/mimic/: mimic.cpp
types/mood_floor/: mood_floor.cpp
types/spell_effect/: spell_effect.cpp
types/treasure/: treasure.cpp
utils/: Makefile.am  Makefile.in  test_weather.c  test_weather.cpp
utils/cre/: CRECombatSimulator.cpp  CREMainWindow.cpp  CREMapInformationManager.cpp  CREMessageItemModel.cpp  ChangesDock.cpp  HelpManager.cpp  ResourcesManager.cpp
utils/cre/assets/: AssetModel.h  AssetUseTree.cpp  AssetUseTree.h  AssetsCollectionWrapper.h
utils/cre/l10n/: cre_fr.ts
utils/cre/treasures/: TreasurePanel.cpp  TreasureWrapper.cpp  TreasureWrapper.h
utils/mapper/: README.md  mapper.cpp
utils/mapper/templates/: inc-page.html  index.html  items.html  maps.html  maps_by_level.html  monsters.html  quests.html  regions.html  search.js  system_quests.html  world.html
